--- a/client/index.html
+++ b/client/index.html
@@ -187,8 +187,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🎲 Azure Dice Roller</h1>
-      <p class="subtitle">Powered by Azure App Service RESTful APIs</p>
+      <h1>🎲 Dice Roller</h1>
 
       <div class="controls">
         <button onclick="wakeUpServer()" id="wakeupBtn">
@@ -197,6 +196,7 @@
         <button onclick="rollDice()" id="rollBtn">
           <span id="rollText">Roll Single Die</span>
         </button>
+        <br />
         <button onclick="rollMultipleDice(3)" id="multi3Btn">
           <span id="multi3Text">Roll 3 Dice</span>
         </button>
