--- a/client/index.html
+++ b/client/index.html
@@ -229,7 +229,7 @@
 
     <script>
       // Update this to your actual backend URL when deployed
-      const API_BASE = window.location.origin;
+      const API_BASE = "https://salmon-ground-0fa94f410.1.azurestaticapps.net/";
       let currentRolls = [];
 
       // Display API URL
